k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stash
  namespace: stash
  labels:
    app: stash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stash
  template:
    metadata:
      labels:
        app: stash
    spec:
      imagePullSecrets:
      - name: headless-commerce-package-access-token
      containers:
      - name: stash
        image: ghcr.io/headless-commerce/stash
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /health/live
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  namespace: stash
  name: stash
  release: kube-prometheus-stack
spec:
  ports:
  - name: web
    port: 80
    targetPort: 4000
  selector:
    app: stash
